containers/ActivityStream/style.scss
@import "~theme/variables.scss";

:global(.ActivityStream__ActivityWrapper) {
  position: relative;
  z-index: 100;
  margin-bottom: $padding * 4;

  &::after {
    content: '';
    background: $timeline-color;
    height: 100%;
    position: absolute;
    top: 36px;
    left: 34px;
    width: 4px;
  }

  &:last-of-type::after {
    content: none;
  }
}

:global(.ActivityStream) {
  :global(.ActivityStream__Activity) {
    position: relative;
    z-index: 100;
    overflow: hidden;
    background: $off-white;

    :global(.ActivityStream__Icon) {
      width: 36px;
      height: 36px;
      border-radius: 18px;
      margin-left: 2px;
      display: flex;
      align-items: center;
      justify-content: center;
      color: white;

      :global(.Icon) {
        width: 36px;
        height: 36px;
        padding: 8px;
        fill: white;
      }
    }

    :global(.Message__headerMiddle) {
      h5 {
        font-size: 1.4rem;
        position: relative;

        :global(.Tooltip) {
          position: absolute;
          top: -3px;
          margin-left: 4px;
        }
      }
      :global(.Message__subtitle) {

      }
      :global(.Message__time) {
        font-size: 1.2rem;
      }
    }

    :global(.Message__toggle) {
      margin: -$padding * 2;
      padding-right: $padding * 2;
    }

    :global(.Message__header) {
      padding: $padding * 2;

      h5 {
        font-weight: bold;
        font-size: 1.25rem;
      }
    }

    :global(.Message__body) {
      border-top: 1px solid $border-color;
      padding: 0;
    }

    &:global(.Message--focused)::after {
      top: 100%;
      height: 40px;
    }
  }
}

